--- a/design/main_interface.ui
+++ b/design/main_interface.ui
@@ -13,7 +13,15 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">*{
+	border:none;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">background-color:rgb(24,24,36);</string>
+   </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
      <number>0</number>
@@ -34,9 +42,12 @@
      <widget class="QFrame" name="slide_menu_container">
       <property name="maximumSize">
        <size>
-        <width>200</width>
+        <width>0</width>
         <height>16777215</height>
        </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:rgb(9,5,13);</string>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -68,6 +79,12 @@
            <height>0</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+	background-color:rgb(24,24,36);
+	border-radius:5px;
+}</string>
+         </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
@@ -75,6 +92,21 @@
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <property name="leftMargin">
+           <number>9</number>
+          </property>
+          <property name="topMargin">
+           <number>9</number>
+          </property>
+          <property name="rightMargin">
+           <number>9</number>
+          </property>
+          <property name="bottomMargin">
+           <number>9</number>
+          </property>
           <item alignment="Qt::AlignHCenter|Qt::AlignTop">
            <widget class="QFrame" name="frame_3">
             <property name="frameShape">
@@ -120,12 +152,12 @@
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="label_2">
+              <widget class="QLabel" name="label_3">
                <property name="text">
                 <string/>
                </property>
                <property name="pixmap">
-                <pixmap resource="../691f5d0a/icons.qrc">:/icons/cc29539d/chrome.svg</pixmap>
+                <pixmap resource="../7fb5d5eb/icons.qrc">:/icons/chrome.svg</pixmap>
                </property>
               </widget>
              </item>
@@ -169,7 +201,7 @@
               <number>0</number>
              </property>
              <property name="topMargin">
-              <number>0</number>
+              <number>20</number>
              </property>
              <property name="rightMargin">
               <number>0</number>
@@ -202,35 +234,53 @@
                  <number>0</number>
                 </property>
                 <item>
-                 <widget class="QPushButton" name="pushButton_5">
+                 <widget class="QPushButton" name="database_widget_button">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>32</height>
+                   </size>
+                  </property>
                   <property name="text">
                    <string>Поисковик</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../691f5d0a/icons.qrc">
-                    <normaloff>:/icons/501cb804/search.svg</normaloff>:/icons/501cb804/search.svg</iconset>
+                   <iconset resource="../7fb5d5eb/icons.qrc">
+                    <normaloff>:/icons/search.svg</normaloff>:/icons/search.svg</iconset>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="pushButton_6">
+                 <widget class="QPushButton" name="search_widget_button">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>32</height>
+                   </size>
+                  </property>
                   <property name="text">
                    <string>База данных</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../691f5d0a/icons.qrc">
-                    <normaloff>:/icons/5ee5da0b/database.svg</normaloff>:/icons/5ee5da0b/database.svg</iconset>
+                   <iconset resource="../7fb5d5eb/icons.qrc">
+                    <normaloff>:/icons/database.svg</normaloff>:/icons/database.svg</iconset>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="pushButton_7">
+                 <widget class="QPushButton" name="settings_widget_button">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>32</height>
+                   </size>
+                  </property>
                   <property name="text">
                    <string>Настройки</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../691f5d0a/icons.qrc">
-                    <normaloff>:/icons/6b30a884/settings.svg</normaloff>:/icons/6b30a884/settings.svg</iconset>
+                   <iconset resource="../7fb5d5eb/icons.qrc">
+                    <normaloff>:/icons/settings.svg</normaloff>:/icons/settings.svg</iconset>
                   </property>
                  </widget>
                 </item>
@@ -265,9 +315,24 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="QPushButton" name="pushButton_8">
+              <widget class="QPushButton" name="exit_button">
+               <property name="font">
+                <font>
+                 <pointsize>13</pointsize>
+                </font>
+               </property>
                <property name="text">
                 <string>Выход</string>
+               </property>
+               <property name="icon">
+                <iconset resource="../7fb5d5eb/icons.qrc">
+                 <normaloff>:/icons/log-out (1).svg</normaloff>:/icons/log-out (1).svg</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>32</width>
+                 <height>32</height>
+                </size>
                </property>
               </widget>
              </item>
@@ -306,6 +371,9 @@
        </property>
        <item alignment="Qt::AlignTop">
         <widget class="QFrame" name="header_frame">
+         <property name="styleSheet">
+          <string notr="true">background-color:rgb(9,5,13);</string>
+         </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
@@ -314,19 +382,19 @@
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <property name="spacing">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="leftMargin">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="topMargin">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="rightMargin">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="bottomMargin">
-           <number>0</number>
+           <number>6</number>
           </property>
           <item alignment="Qt::AlignLeft|Qt::AlignTop">
            <widget class="QFrame" name="frame_2">
@@ -353,7 +421,7 @@
               <number>0</number>
              </property>
              <item alignment="Qt::AlignLeft|Qt::AlignTop">
-              <widget class="QPushButton" name="pushButton_4">
+              <widget class="QPushButton" name="menu_button">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -364,8 +432,8 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="../691f5d0a/icons.qrc">
-                 <normaloff>:/icons/c15a4651/align-justify.svg</normaloff>:/icons/c15a4651/align-justify.svg</iconset>
+                <iconset resource="../7fb5d5eb/icons.qrc">
+                 <normaloff>:/icons/align-justify.svg</normaloff>:/icons/align-justify.svg</iconset>
                </property>
                <property name="iconSize">
                 <size>
@@ -403,7 +471,7 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="QPushButton" name="pushButton_3">
+              <widget class="QPushButton" name="minimize_window_button">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -414,13 +482,13 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="../691f5d0a/icons.qrc">
-                 <normaloff>:/icons/e77432b9/arrow-down-left.svg</normaloff>:/icons/e77432b9/arrow-down-left.svg</iconset>
+                <iconset resource="../7fb5d5eb/icons.qrc">
+                 <normaloff>:/icons/arrow-down-left.svg</normaloff>:/icons/arrow-down-left.svg</iconset>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_2">
+              <widget class="QPushButton" name="restore_window_button">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -431,13 +499,13 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="../691f5d0a/icons.qrc">
-                 <normaloff>:/icons/45d1cc4/maximize-2.svg</normaloff>:/icons/45d1cc4/maximize-2.svg</iconset>
+                <iconset resource="../7fb5d5eb/icons.qrc">
+                 <normaloff>:/icons/maximize-2.svg</normaloff>:/icons/maximize-2.svg</iconset>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton">
+              <widget class="QPushButton" name="close_window_button">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -448,8 +516,8 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="../691f5d0a/icons.qrc">
-                 <normaloff>:/icons/72623cdb/x.svg</normaloff>:/icons/72623cdb/x.svg</iconset>
+                <iconset resource="../7fb5d5eb/icons.qrc">
+                 <normaloff>:/icons/x.svg</normaloff>:/icons/x.svg</iconset>
                </property>
               </widget>
              </item>
@@ -482,7 +550,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../691f5d0a/icons.qrc"/>
+  <include location="../7fb5d5eb/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
