Сделал интерфейс для выбора параметров

--- a/design/icons/icons.qrc
+++ b/design/icons/icons.qrc
@@ -10,6 +10,7 @@
     <file>minimize-2.svg</file>
     <file>maximize-2.svg</file>
     <file>log-out (1).svg</file>
+    <file>icons.qrc</file>
     <file>file-text.svg</file>
     <file>database.svg</file>
     <file>chrome.svg</file>
