--- a/design/main_interface.ui
+++ b/design/main_interface.ui
@@ -163,7 +163,7 @@
                 <string/>
                </property>
                <property name="pixmap">
-                <pixmap resource="../832c2ab8/icons.qrc">:/icons/chrome.svg</pixmap>
+                <pixmap>:/icons/chrome.svg</pixmap>
                </property>
               </widget>
              </item>
@@ -251,7 +251,7 @@
                    <string>Поисковик</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../832c2ab8/icons.qrc">
+                   <iconset>
                     <normaloff>:/icons/search.svg</normaloff>:/icons/search.svg</iconset>
                   </property>
                  </widget>
@@ -268,7 +268,7 @@
                    <string>База данных</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../832c2ab8/icons.qrc">
+                   <iconset>
                     <normaloff>:/icons/database.svg</normaloff>:/icons/database.svg</iconset>
                   </property>
                  </widget>
@@ -285,7 +285,7 @@
                    <string>Настройки</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../832c2ab8/icons.qrc">
+                   <iconset>
                     <normaloff>:/icons/settings.svg</normaloff>:/icons/settings.svg</iconset>
                   </property>
                  </widget>
@@ -334,7 +334,7 @@
                 <string>Выход</string>
                </property>
                <property name="icon">
-                <iconset resource="../832c2ab8/icons.qrc">
+                <iconset>
                  <normaloff>:/icons/log-out (1).svg</normaloff>:/icons/log-out (1).svg</iconset>
                </property>
                <property name="iconSize">
@@ -441,7 +441,7 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="../832c2ab8/icons.qrc">
+                <iconset>
                  <normaloff>:/icons/align-justify.svg</normaloff>:/icons/align-justify.svg</iconset>
                </property>
                <property name="iconSize">
@@ -475,6 +475,9 @@
          <layout class="QVBoxLayout" name="verticalLayout_6">
           <item>
            <widget class="QStackedWidget" name="stackedWidget">
+            <property name="currentIndex">
+             <number>0</number>
+            </property>
             <widget class="QWidget" name="searchPatent_page"/>
             <widget class="QWidget" name="database_page"/>
            </widget>
