--- a/design/patentSearch_interface.ui
+++ b/design/patentSearch_interface.ui
@@ -38,6 +38,18 @@
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QFrame" name="frame">
      <property name="minimumSize">
@@ -394,7 +406,7 @@ QCheckBox{
                     <property name="minimumSize">
                      <size>
                       <width>150</width>
-                      <height>25</height>
+                      <height>30</height>
                      </size>
                     </property>
                     <item>
@@ -656,6 +668,12 @@ QCheckBox{
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>30</height>
+                  </size>
                  </property>
                  <property name="text">
                   <string>Применить</string>
