--- a/design/main_interface.ui
+++ b/design/main_interface.ui
@@ -476,8 +476,9 @@
           <item>
            <widget class="QStackedWidget" name="stackedWidget">
             <property name="currentIndex">
-             <number>1</number>
+             <number>0</number>
             </property>
+            <widget class="QWidget" name="setting_page"/>
             <widget class="QWidget" name="searchPatent_page"/>
             <widget class="QWidget" name="database_page"/>
            </widget>
